' API ' implemented, functionality implemented

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="wrapper">
       <h3>Chuck Norris Jokes</h3>
       <div class="container">
-        <div id="joke" class="joke"></div>
+        <div id="joke" class="joke">Here is your joke.</div>
         <button id="joke-btn" class="btn">Get Some Joke</button>
       </div>
     </div>
